# Lem_in

./: CMakeLists.txt  Makefile  README.md  author  main.c  push_utils.c  test.txt
inc/: lemin.h
includes/: lem_in.h  lem_in_types.h
lemin-visual/: constants.js  draw.js  filename.js  index.html  lem-in  package-lock.json  package.json  parse.js  result.txt  result3  result4  result6  result7  results.txt  results_four.txt  style.css  utils.js  visualiser.js
lemin-visual/maps/: 1K.map  multipath2.map
resources/: help
sources/: cmp.c  init_ants.c  init_ants_check.c  init_coord_check.c  init_data.c  init_flags.c  init_line_process.c  init_links.c  init_prepare.c  init_rooms.c  init_rooms_check.c  init_simple_check.c  init_utility.c  link.c  main.c  msg.c  msg_error.c  msg_error_1.c  msg_error_2.c  msg_error_3.c  msg_help.c  msg_success.c  msg_usage.c  node.c  output_data.c  output_extra.c  output_input.c  output_line.c  output_prepare.c  output_short.c  output_utility.c  path.c  process_bhandari.c  process_data.c  process_dijkstra.c  process_mod_graph.c  process_prepare.c  process_rest_graph.c  process_set.c  process_utility.c  (+3 more)
src/: errors.c  parse_validity_connections.c  parse_validity_connections_2.c  parse_validity_indexes.c  parse_validity_main.c  parse_validity_utils.c
